# template_ros_2_package

./: CMakeLists.txt  README.md  package.xml
include/template_ros_2_package/: lifecycle_node.hpp  simple_node.hpp
launch/: template.launch.py
msg/: MensagemExemplo.msg
params/: lifecycle_node.yaml  simple_node.yaml
src/: lifecycle_node.cpp  lifecycle_node_main.cpp  simple_node.cpp  simple_node_main.cpp
srv/: ServicoExemplo.srv
